# pudgeland

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.uk.md  CODE_OF_CONDUCT.md  LICENSE  Pipfile  Procfile  README.md  README.ru.md  README.ua.md  README.uk.md  TODO.md  TODO.ru.md  TODO.uk.md  config.json.example  configuration.json  configuration.json.example  main.py  nixpacks.json  nixpacks.toml  pyproject.toml  railway.json  railway.toml  readme.md  readme.ru.md  readme.ua.md  requirements.developers.txt  requirements.txt  translations.md
.github/: FUNDING.yml
api/: build.ts  bun.lockb  package.json
api/prisma/: schema.prisma
api/src/: index.ts  main.ts
backend/: bun.lockb  package.json
backend/src/: main.ts
bot/: .gitignore  CHANGELOG.md  CHANGELOG.ru.md  CHANGELOG.uk.md  Dockerfile  README.md  README.ru.md  README.uk.md  TODO.md  TODO.ru.md  TODO.uk.md  __init__.py  __main__.py  banner.txt  bots.py  bun.lockb  economics.py  main.py  package-lock.json  package.json  readme.md  readme.ru.md  readme.ua.md  requirements.txt  tsconfig.json  types.py  typevars.py
bot/Bot/: Bot.csproj  Bot.sln
bot/bot/: applications.py  banner.txt  bot.py  cmd.py  code.py  commands.py  config.py  contexts.py  databases.py  db.py  decorate.py  embed.py  emoji.py  handle.py  humanize.py  models.py  plugins.py  trim.py  types.py
bot/client/: clients.py
bot/command/: exceptions.py
bot/commands/: profile.py
bot/common/: clients.py  commons.py  configurations.py  contexts.py  databases.py  embeds.py  exceptions.py  models.py  plugins.py  shops.py
bot/core/: configurations.py  databases.py  environments.py
bot/exception/: exceptions.py
bot/locale/: locales.py
bot/model/: models.py
bot/plugin/: _plugins.py  plugins.py  profiles.py
bot/prisma/: schema.prisma
bot/shop/: shops.json  shops.py
bot/sources/: enums.ts  index.ts  main.ts  types.d.ts
bot/src/: index.ts  types.d.ts
bot/utility/: embeds.py
cmd/nixpacks/: build.sh  install.sh  start.sh
database/: index.js  package-lock.json  package.json
di/bot/: README.ua.md  bots.py
economics/: index.cjs  index.js  package-lock.json  package.json
friulano/: readme.md  readme.ru.md  readme.ua.md
future/Bot/: Program.cs
future/bot/: Bot.sln
io/: Dockerfile  bun.lockb  package.json
io/src/: lib.ts  main.ts
package/: README.md  README.ua.md
package/alhaitham/: CHANGELOG.md  CHANGELOG.ru.md  README.md  README.ru.md  README.uk.md  TODO.md  TODO.ru.md  TODO.uk.md  pyproject.toml
package/alhaitham/example/: basics.py
package/alhaitham/src/alhaitham/client/: clients.py
package/alhaitham/translation/: README.ru.md
package/collei/: README.md  README.ru.md  README.ua.md  pyproject.toml
package/nahida/: CHANGELOG.md  CHANGELOG.ru.md  README.md  README.ru.md  README.ua.md  README.uk.md  TODO.md  TODO.ru.md  TODO.uk.md  pyproject.toml
package/tighnari/: CHANGELOG.md  CHANGELOG.ru.md  README.md  README.ru.md  README.ua.md  README.uk.md  TODO.md  (+3 more)
plugin/: pom.xml
prisma/: schema.prisma
pudgeland/: __main__.py  pom.xml
server/: Dockerfile  bun.lockb  main.py  package.json  requirements.txt
translation/: README.ru.md
trevigiano/: index.py  main.py  nixpacks.json  readme.md  readme.ru.md  readme.ua.md  requirements.developers.txt  requirements.txt  translations.md
websocket/: Dockerfile  bun.lockb  package.json  tsconfig.json
(+926 files in other folders)
