[tool.poetry]
name = "bot"
version = "0.1.0"
description = "Pudgeland"
authors = ["elaresai <elaresai@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pre-commit = "^3.3.3"
ruff = "^0.0.282"
black = "^23.7.0"
python-dotenv = "^1.0.0"
attrs = "^23.1.0"
hikari = "^2.0.0.dev120"
hikari-crescent = "^0.6.2"
hikari-miru = "^3.1.2"
prisma = "^0.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
