[tool.poetry]
name = "alhaitham"
version = "0.1.0"
description = "An unofficial The Dog API wrapper for Python"
license = "MIT"
authors = ["elaresai <elaresai@gmail.com>"]
maintainers = ["elaresai <elaresai@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/eleresai/pudgeland"
repository = "https://github.com/eleresai/pudgeland"
classifiers = [
    "License :: OSI Approved :: MIT License",

    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
]
packages = [{ include = "alhaitham", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
attrs = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
